test/src/e2e_vm_tests/test_programs/should_pass/language/array_dynamic_oob/src/main.sw
script;

fn main() -> u32 {
    let ary = [1, 2, 3, 4];
    let idx = 45;
    // thread 'main' panicked at 'index out of bounds: the len is 3 but the index is 45'
    ary[idx]
}
